--- a/statics/json/config.json
+++ b/statics/json/config.json
@@ -2,5 +2,7 @@
   "API_URL":"https://players-api-281456272382.us-central1.run.app/players",
   "VOTE_URL":"https://players-api-281456272382.us-central1.run.app/vote",
   "RANKING_API_URL":"https://players-api-281456272382.us-central1.run.app/ranking",
-  "API_KEY":"wbIGTf3sOvp7NnXsSJfs"
+  "API_KEY":"wbIGTf3sOvp7NnXsSJfs",
+  "HOME_TEAM":"広島ドラゴンフライズ",
+  "VISITOR_TEAM":"レバンガ北海道"
 }
