--- a/statics/json/config.json
+++ b/statics/json/config.json
@@ -4,5 +4,5 @@
   "RANKING_API_URL":"https://players-api-281456272382.us-central1.run.app/ranking",
   "API_KEY":"wbIGTf3sOvp7NnXsSJfs",
   "HOME_TEAM":["広島ドラゴンフライズ","HD"],
-  "VISITOR_TEAM":["レバンガ北海道","RH"]
+  "VISITOR_TEAM":["レバンガ北海道","LH"]
 }
