--- a/statics/json/config.json
+++ b/statics/json/config.json
@@ -4,5 +4,7 @@
   "RANKING_API_URL":"https://players-api-281456272382.us-central1.run.app/ranking",
   "API_KEY":"wbIGTf3sOvp7NnXsSJfs",
   "HOME_TEAM":["広島ドラゴンフライズ","HD"],
-  "VISITOR_TEAM":["レバンガ北海道","LH"]
+  "VISITOR_TEAM":["レバンガ北海道","LH"],
+  "MATCH_DATE" : "2025年10月11日",
+  "ARENA" : "広島サンプラザホール"
 }
