--- a/statics/json/config.json
+++ b/statics/json/config.json
@@ -6,5 +6,11 @@
   "HOME_TEAM":["川崎ブレイブサンダース","KB"],
   "VISITOR_TEAM":["広島ドラゴンフライズ","HD"],
   "MATCH_DATE" : "2025年10月04日",
-  "ARENA" : "東急ドレッセとどろきアリーナ"
+  "ARENA" : "東急ドレッセとどろきアリーナ",
+  "GAME_DATA":[
+    {"match_date":"2025-10-03","arena":"テストアリーナ","home":["川崎ブレイブサンダース","KB"],"visitor":["広島ドラゴンフライズ","HD"]},
+    {"match_date":"2025-10-04","arena":"東急ドレッセとどろきアリーナ","home":["川崎ブレイブサンダース","KB"],"visitor":["広島ドラゴンフライズ","HD"]},
+    {"match_date":"2025-10-05","arena":"東急ドレッセとどろきアリーナ","home":["川崎ブレイブサンダース","KB"],"visitor":["広島ドラゴンフライズ","HD"]},
+    {"match_date":"2025-10-11","arena":"広島サンプラザホール","home":["広島ドラゴンフライズ","HD"],"visitor":["レバンガ北海道","LH"]},
+    {"match_date":"2025-10-12","arena":"広島サンプラザホール","home":["広島ドラゴンフライズ","HD"],"visitor":["レバンガ北海道","LH"]}]
 }
