--- a/docs/json/config.json
+++ b/docs/json/config.json
@@ -4,7 +4,21 @@
   "RANKING_API_URL":"https://players-api-281456272382.us-central1.run.app/ranking",
   "API_KEY":"wbIGTf3sOvp7NnXsSJfs",
   "GAME_DATA":[
-    {"match_date":"2025年10月04日","arena":"東急ドレッセとどろきアリーナ","home":{"team_name": "川崎ブレイブサンダース","team_cd":"KB"},"visitor":{"team_name":"広島ドラゴンフライズ","team_cd":"HD"}},
-    {"match_date":"2025年10月05日","arena":"東急ドレッセとどろきアリーナ","home":{"team_name": "川崎ブレイブサンダース","team_cd":"KB"},"visitor":{"team_name":"広島ドラゴンフライズ","team_cd":"HD"}}
+    {"match_date":"2025年10月04日",
+      "arena":"東急ドレッセとどろきアリーナ",
+      "home":{"team_name": "川崎ブレイブサンダース","team_cd":"KB","score":83},
+      "visitor":{"team_name":"広島ドラゴンフライズ","team_cd":"HD","score":91}},
+    {"match_date":"2025年10月05日",
+      "arena":"東急ドレッセとどろきアリーナ",
+      "home":{"team_name": "川崎ブレイブサンダース","team_cd":"KB","score":88},
+      "visitor":{"team_name":"広島ドラゴンフライズ","team_cd":"HD","score":114}},
+    {"match_date":"2025年10月11日",
+      "arena":"広島サンプラザホール",
+      "home":{"team_name":"広島ドラゴンフライズ","team_cd":"HD","score":73},
+      "visitor":{"team_name":"レバンガ北海道","team_cd":"LH","score":94}},
+    {"match_date":"2025年10月12日",
+      "arena":"広島サンプラザホール",
+      "home":{"team_name":"広島ドラゴンフライズ","team_cd":"HD","score":0},
+      "visitor":{"team_name":"レバンガ北海道","team_cd":"LH","score":0}} 
     ]
   }
